Fixed rectangles playground overflow

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,15 @@ html {
   min-width: 540px !important;
   padding-bottom: 20px !important;
 }
+#fixed-size-list-wrapper-2 > div {
+  padding-right: 10px;
+  padding-bottom: 20px !important;
+  max-width: 100% !important;
+  box-sizing: border-box;
+}
+#fixed-size-list-wrapper-2 > div > div {
+  position: relative;
+}
 
 @media (min-height: 500px) {
   #NavigationBar {
